# codewars

./: .gitignore  README  bobs_reversing.ipynb  bouncingball.py  dfa.py  dupcount.hs  fibmemo.hs  fixit.hs  fizzbuzz.hs  formatduration.py  janestreet_bug.pi  morsecodes1.hs  notverysecure.py  oneevenorodd.hs  oneevenorodd.py  package-lock.json  pokerhands.py  rgb.js  smallestsum.py  stripcomments.py  tempCodeRunnerFile.js  test.pi  tolkien.py  triangle_nums.pi  xsandos.py  ~gvf5rN6.tmp  ~gvfwqsm.tmp
Connect4/: connect4.py  workspace.code-workspace
chordcolor/: chordcolor.hs  chordcolor.py
debugger/: debugger.py  tests.txt
haskell/: change.hs  fizzbuzz.hs  intervals.hs  josephsus.hs  nextsmallest.hs  pagination.hs  rankingsystem.hs  smallestsum.hs  soduku_validator.hs  tester.hs  watermelon.hs
humantime/: humantime.hs  humantime.js  package.json
janestreet_bug/: janestreet_bug.ipynb  janestreet_bug.pi  messages.txt  solutions.txt
letterboxed/: CHANGELOG.md.save0  letterboxed.ipynb  letterboxed.py  letterboxed_dict.py  letterboxed_pandas.py
lift/: lift.py  lift.txt  lift_refactor.py
nytimes_games/: LICENSE  letterboxed.hi  letterboxed.hs  letterboxed.ipynb  letterboxed.py  nytimes-games.cabal
nytimes_games/app/: letterboxed.hs
ocaml/: backward_primes.ml  dig_pow.ml  helloworld.ml
othello/: othello.hs
prolog/: mfnums.pl  palindrome.pl  pangram.pl
python/: bearingcheat.py  bearings.py  cakes.py  josephsus.py  length_two_values.py  matrixdet.py  paren.py  persistent.py  practice.ipynb  ranges.py  sudoku_validator.py  tempCodeRunnerFile.py  tolkien.py  (+3 more)
(+64 files in other folders)
