cabal-version:      3.0
name:               nytimes-games
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             dsagman
maintainer:         70487040+dsagman@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -O2

executable letterboxed
    import:           warnings
    main-is:          letterboxed.hs
    build-depends:    base, parallel, containers, mtl, extra, ansi-terminal, time
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
